--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management' // 스프링 부트의 의존성들을 관리해 주는 플러그인
 
-group 'com.springboot-basic.book'
+group 'com.basic.book'
 version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
@@ -27,6 +27,19 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // JUnit4
+    testImplementation 'junit:junit:4.12'
+    // Lombok
+    implementation 'org.projectlombok:lombok'
+    //gradle 이 버전 5 라면
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+    // jpa
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'com.h2database:h2'
+    // mustache
+    implementation 'org.springframework.boot:spring-boot-starter-mustache'
 }
 
 test {
